--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "intervention/image": "2.*",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "stripe/stripe-php": "^16.4"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
